Check and fix native access warnings in Java 24
Fixes #31625